<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:id="@+id/relTwoLay"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
     <WebView android:id="@+id/webView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
	 <ImageView 
	     android:id="@+id/featureTileTop"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_centerHorizontal="true"
	     android:layout_marginTop="50dip"
	     android:background="@drawable/border_1_px"
	     android:contentDescription="@string/featured_app_promo_desc" />
	 
    <LinearLayout
        android:id="@+id/socialLinLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="80dip" >

        <ImageView
            android:id="@+id/googleCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:contentDescription="@string/google_icon" />

        <ImageView
            android:id="@+id/twiiterCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:contentDescription="@string/twitter_icon" />

        <ImageView
            android:id="@+id/fbCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:contentDescription="@string/facebook_icon" />
    </LinearLayout>

</RelativeLayout>
</LinearLayout>